--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "bignumber.js": "^9.0.2",
     "core-js": "^3.6.5",
     "ethers": "^5.6.5",
+    "ipfs-http-client": "^56.0.3",
     "mcp.js": "^0.1.2",
     "vue": "^3.0.0",
     "vue-router": "^4.0.15",
